--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
         <item quantity="one">Called at %2$s</item>
         <item quantity="other">%1$d calls, last: %2$s</item>
     </plurals>
-    <string name="blacklist_whitelist">Whitelist</string>
+    <string name="blacklist_whitelist">Whitelist mode</string>
     <string name="blacklist_import">Import Blacklist</string>
     <string name="blacklist_export">Export Blacklist</string>
     <string name="blacklist_exported_to">Exported to</string>
