--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -13,6 +13,7 @@
         <item quantity="other">%1$d dzwonił, ostatnio: %2$s</item>
     </plurals>
     <string name="blacklist_whitelist">Tryb Whitelisty</string>
+    <string name="dark_mode">Tryb nocny</string>
     <string name="blacklist_import">Zaimportuj Blacklistę</string>
     <string name="blacklist_export">Eksportuj Blacklistę</string>
     <string name="blacklist_exported_to">Wyeksportowano do</string>
