--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,6 +12,7 @@
         <item quantity="one">Angerufen um %2$s</item>
         <item quantity="other">%1$d Anrufe, zuletzt: %2$s</item>
     </plurals>
+    <string name="allow_call">Anruf zulassen</string>
 
     <!-- EditActivity -->
     <string name="edit_add_number">Nummer hinzufügen</string>
