--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="edit_number_hints">Enter the number in +COUNTRY-NUMBER format (as Android would show in your dialer). Use \"*\" as a wildcard for zero or more digits, and \"#\" for exactly one digit.</string>
     <string name="edit_must_not_be_empty">Must not be empty</string>
     <string name="edit_changes_saved">Changes saved</string>
+    <string name="allow_call">Allow call</string>
 
     <!-- CallReceiver -->
     <string name="receiver_notify_call_rejected">Call rejected</string>
