--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,14 @@
         <item quantity="one">Called at %2$s</item>
         <item quantity="other">%1$d calls, last: %2$s</item>
     </plurals>
-    <string name="blacklist_whitelist">Whitelist mode</string>
+    <string name="block_out_of_list">Block numbers out of list</string>
     <string name="dark_mode">Dark mode</string>
     <string name="blacklist_import">Import Blacklist</string>
     <string name="blacklist_export">Export Blacklist</string>
     <string name="blacklist_exported_to">Exported to</string>
+
+    <string name="allow">Allow</string>
+    <string name="block">Block</string>
 
     <!-- EditActivity -->
     <string name="edit_add_number">Add number</string>
