--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NoPhoneSpam</string>
+    <string name="app_name">CallBlocker</string>
 
     <!-- BlacklistActivity -->
     <string name="blacklist_block_hidden_numbers">非表示の番号をブロック</string>
     <string name="blacklist_show_notifications">通知を表示</string>
-    <string name="blacklist_about">NoPhoneSpam について</string>
-    <string name="blacklist_permissions_required">NoPhoneSpam が動作するためのアクセス許可がありません。</string>
+    <string name="blacklist_about">CallBlocker について</string>
+    <string name="blacklist_permissions_required">CallBlocker が動作するためのアクセス許可がありません。</string>
     <string name="blacklist_request_permissions">アクセス許可を要求</string>
     <plurals name="blacklist_call_details">
         <item quantity="one">%2$s に着信</item>
