--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">NoPhoneSpam</string>
+    <string name="app_name">CallBlocker</string>
 
     <!-- BlacklistActivity -->
     <string name="blacklist_block_hidden_numbers">Block hidden numbers</string>
     <string name="blacklist_show_notifications">Show notifications</string>
-    <string name="blacklist_about">About NoPhoneSpam</string>
-    <string name="blacklist_permissions_required">NoPhoneSpam doesn\'t have the permissions to work.</string>
+    <string name="blacklist_about">About CallBlocker</string>
+    <string name="blacklist_permissions_required">CallBlocker doesn\'t have the permissions to work.</string>
     <string name="blacklist_request_permissions">Request permissions</string>
     <plurals name="blacklist_call_details">
         <item quantity="one">Called at %2$s</item>
