--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,8 @@
         <item quantity="other">%1$d llamadas, última a las: %2$s</item>
     </plurals>
 
+    <string name="edit_mode">Modo de edición</string>
+
     <!-- EditActivity -->
     <string name="edit_add_number">Añadir número</string>
     <string name="edit_edit_number">Editar número</string>
