--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="allow">Allow</string>
     <string name="block">Block</string>
 
+    <string name="edit_mode">Edit mode</string>
+
     <!-- EditActivity -->
     <string name="edit_add_number">Add number</string>
     <string name="edit_edit_number">Edit number</string>
